<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.smartaccesssolutions</groupId>
    <artifactId>performancetracker</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>  
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13.0.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>        
                <configuration>
                        <compilerArgs>
                            <arg>--add-exports</arg>
                            <arg>javafx.graphics/com.sun.javafx.perf=de.smartaccesssolutions.pulselogger</arg>
                        </compilerArgs>
                    <release>11</release>
                </configuration>        
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4-SNAPSHOT</version>
                <configuration>
                    <mainClass>de.smartaccesssolutions.pulselogger.App</mainClass>
                    <commandlineArgs>--add-exports javafx.graphics/com.sun.javafx.perf=de.smartaccesssolutions.pulselogger</commandlineArgs>
<!--                    <commandlineArgs>add-exports javafx.graphics/com.sun.javafx.perf=de.smartaccesssolutions.pulselogger -Djavafx.animation.fullspeed=true -Djavafx.pulseLogger=true -Dcom.sun.management.jmxremote</commandlineArgs>-->
                </configuration>
                <executions>
                    <execution>
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
                            </options>
                            <commandlineArgs>-Djavafx.pulseLogger=true -Djavafx.pulseLogger.threshold=0 -Dcom.sun.management.jmxremote</commandlineArgs>
                            <mainClass>de.smartaccesssolutions.pulselogger.App</mainClass>

                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <name>performancetracker</name>
</project>